# python-src-template

./: .dockerignore  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  init_template.py  module_setup.sh  noxfile.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt  setup.cfg  setup.py  template_setup.py  tox.ini
.github/workflows/: codecov.yml  pre-commit.yml  python-tests.yml
alt_files/: Dockerfile  Makefile  pyproject.toml
docs/: README.md  development.md  src_structure.md
requirements/: constraints.txt  requirements-base.in  requirements-base.txt  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
src/module_name/: sample.py
src/module_name/sample_data/: README.md  sample.csv  sample.json
tests/: sample_test.py  test_sample.py
wip/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
