[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "module-name"
requires-python = ">=3.10"
description = "Module Description"
readme = "README.md"
license = "MIT"
authors = [
    { email = "yourname@email.invalid", name = "[YOUR NAME]" },
]
maintainers = []
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "httpx",
]

[dependency-groups]
format = [
    "black",
    "isort",
]
lint = [
    "flake8",
    "flake8-pep585",
    "mypy",
]
dev = [
    "pytest",
    "pytest-randomly",
    "coverage",
]

[project.urls]
homepage = "https://github.com/[ORG NAME]/[REPO NAME]"

# [project.scripts]
# python-src-example = "module_name.sample:main"

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 100

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]
