[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "module-name"
version = "0.0.1"
requires-python = ">=3.11"
description = "Module Description"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
format = [
    "black",
    "isort",
]
lint = [
    "flake8",
    "flake8-pep585",
    "mypy",
]
dev = [
    "pytest",
    "pytest-randomly",
    "coverage",
]

[project.urls]
homepage = "https://github.com/[ORG NAME]/[REPO NAME]"

# [project.scripts]
# python-src-example = "module_name.sample:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.coverage.run]
branch = true
source = ["src/module_name", "tests"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]
