[metadata]
name = module_name
version = 0.0.0
description = Module Description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/python-template
author = Preocts
author_email = preocts@preocts.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = module_name
python_requires = >=3.6
package_dir =
    = src

[options.packages.find]
exclude =
    tests*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-tests.*]
disallow_untyped_defs = false

[coverage:run]
branch = True
include =
    */module_name/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImlementedError
    if 0:
    if __name__ == .__main__.:
ignore_errors = True

[coverage:html]
directory = coverage_html_report

[coverage:xml]
output = coverage.xml
